# schemainspect

./: pyproject.toml
.github/workflows/: ci.yml  publish.yml
schemainspect/pg/: obj.py
schemainspect/pg/sql/: column-privileges.sql  memberships.sql  privileges.sql  roles.sql  schema-privileges.sql  sequence-privileges.sql
