[tool.poetry]
name = "schemahq-schemainspect"
version = "1.0.9"
authors = [ "Robert Lechte <robertlechte@gmail.com>",]
license = "Unlicense"
readme = "README.md"
description = "Schema inspection for PostgreSQL (and possibly others)"
packages = [
    { include = "schemainspect" }
]

repository = "https://github.com/djrobstep/schemainspect"
homepage = "https://github.com/djrobstep/schemainspect"

[tool.poetry.dependencies]
python = "*"
six = "*"
sqlalchemy = "*"

[tool.poetry.dev-dependencies]
sqlbag = "*"
pytest = "*"
pytest-cov = "*"
psycopg2-binary = "*"
flake8 = "*"
isort = "*"
black = { version = ">=19.10b0", python=">=3.6" }

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
